# TAIA-base

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  librechat.yaml  package-lock.json  package.json
api/app/clients/tools/util/: fileSearch.js  handleTools.js
api/db/seeders/: AgentSeeder.js  FileSeeder.js  seed.js
api/server/: index.js
api/server/controllers/: TwoFactorController.js
api/server/controllers/agents/: v1.js
api/server/middleware/accessResources/: canAccessResource.js
api/server/routes/: config.js
api/server/routes/custom/: leads.js
api/server/routes/custom/instructions/: leads.js.md
api/server/routes/files/: files.js
api/server/services/: AuthService.js
api/server/services/Files/: permissions.js  process.js
client/: tailwind.config.cjs
client/src/: style.css
client/src/components/Artifacts/: DownloadArtifact.tsx
client/src/components/Auth/: AuthLayout.tsx  Footer.tsx  Login.tsx  LoginForm.tsx  Registration.tsx
client/src/components/Chat/: BrowserViewport.module.css  BrowserViewport.tsx  Footer.tsx  Landing.tsx
client/src/components/Nav/: AccountSettings.tsx  Settings.tsx
client/src/components/Web/: Sources.tsx
client/src/components/ui/: TermsAndConditionsModal.tsx
client/src/hooks/Files/: useDragHelpers.ts  useFileHandling.ts
client/src/locales/en/: translation.json
client/src/locales/ja/: translation.json
client/src/utils/: getThemeFromEnv.js
leads/: leads.csv
mcps/browser-harness/: Dockerfile  SECURITY.md  pyproject.toml  server.py  server.py.orig
mcps/browser-harness/browser/: __init__.py  config.py  ratelimit.py  session.py  tools.py  utils.py
mcps/ocr/: .dockerignore  Dockerfile  main_api.py  main_mcp.py  pyproject.toml  reset_db.py  reset_db.sh  start.sh
mcps/ocr/api/: app.py
mcps/ocr/mcp_server/: server.py
mcps/ocr/ocr/: config.py  core.py  docx.py  image.py  model.py  rate_limit.py  reflow.py  router.py  safety.py  sanitizer.py  storage.py  storage_config.py  translate.py  validators.py
mcps/ocr/static/: viewer.html
mcps/ocr/static/css/: viewer.css
mcps/ocr/static/js/: viewer.js
mcps/sheet-harness/: DEPLOYMENT_COMPLETE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  docker-compose.yml  fix_server_tests.py  fix_tests.py  pyproject.toml
mcps/sheet-harness/taia_sheet_harness/: __init__.py  download_server.py  main.py  models.py  server.py  taia_bridge.py  workbook.py
mcps/sheet-harness/tests/: test_bridge.py  test_server.py  test_workbook.py
mcps/taia-sales/: taia-widget.js  test.html
mcps/taia-sales/admin/: Dockerfile  api.py  pyproject.toml
mcps/taia-sales/demo/: admin.html  customer.html
mcps/taia-sales/mcp/: Dockerfile  main.py  pyproject.toml
mcps/web-tools/: Dockerfile  main.py  pyproject.toml
(+12 files in other folders)
