[project]
name = "taia-browser-harness"
version = "0.1.0"
description = "Playwright-based agentic browser MCP server for TAIA"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.44.0",
    "Pillow>=10.0.0",
    "playwright-stealth>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browser"]

[tool.uv]
dev-dependencies = []