[project]
name = "web-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.11.4",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.26.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pypdf>=6.9.2",
    "uvicorn>=0.42.0",
    "youtube-transcript-api>=0.6.2",
]

